force-app/main/default/objects/Employee__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(ISBLANK (Term_Date__c) || AND(TODAY() &gt;= Hire_Date__c, TODAY() &lt;= Term_Date__c), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>