force-app/main/default/objects/Employee__c/fields/BirthdayFinder__c.field-meta.xml
<CustomField>
    <fullName>BirthdayFinder__c</fullName>
    <formula>IF(

AND(
DAY(TODAY()) = DAY(Birthday__c),
MONTH(TODAY()) = MONTH(Birthday__c)),

TRUE,

FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Finder</label>
    <type>Checkbox</type>
</CustomField>