force-app/main/default/objects/Employee__c/fields/Blanket__c.field-meta.xml
<CustomField>
    <fullName>Blanket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blanket</label>
    <type>Checkbox</type>
</CustomField>