force-app/main/default/objects/Employee__c/fields/Chatter_Free_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Free_User_ID__c</fullName>
    <label>Chatter Free User ID</label>
    <type>TextArea</type>
</CustomField>