force-app/main/default/objects/Employee__c/fields/Dock__c.field-meta.xml
<CustomField>
    <fullName>Dock__c</fullName>
    <inlineHelpText>Has the employee been assigned a docking station, for use with their primary laptop? Will be N/A for desktops.</inlineHelpText>
    <label>Dock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>