force-app/main/default/objects/Employee__c/fields/Fan__c.field-meta.xml
<CustomField>
    <fullName>Fan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fan</label>
    <type>Checkbox</type>
</CustomField>