force-app/main/default/objects/Employee__c/fields/Heater__c.field-meta.xml
<CustomField>
    <fullName>Heater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heater</label>
    <type>Checkbox</type>
</CustomField>