force-app/main/default/objects/Employee__c/fields/Hourly_Wage__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Wage__c</fullName>
    <description>For use in Cleanslate staff wage allocations.</description>
    <label>Hourly Wage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>