force-app/main/default/objects/Employee__c/fields/Laptop_Stand__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Stand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Laptop Stand</label>
    <type>Checkbox</type>
</CustomField>