force-app/main/default/objects/Employee__c/fields/Monitor_Stand__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Stand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitor Stand</label>
    <type>Checkbox</type>
</CustomField>