force-app/main/default/objects/Employee__c/fields/Mouse__c.field-meta.xml
<CustomField>
    <fullName>Mouse__c</fullName>
    <inlineHelpText>Has the employee been assigned a second mouse, beyond the one built into their primary laptop? Will be N/A for desktops.</inlineHelpText>
    <label>Mouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>