force-app/main/default/objects/Employee__c/fields/Phone_Charger__c.field-meta.xml
<CustomField>
    <fullName>Phone_Charger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Charger</label>
    <type>Checkbox</type>
</CustomField>