force-app/main/default/objects/Employee__c/fields/Receive_Birthday_Posts__c.field-meta.xml
<CustomField>
    <fullName>Receive_Birthday_Posts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Birthday Posts</label>
    <type>Checkbox</type>
</CustomField>