force-app/main/default/objects/Employee__c/fields/Reset_Birthday_System__c.field-meta.xml
<CustomField>
    <fullName>Reset_Birthday_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Birthday System</label>
    <type>Checkbox</type>
</CustomField>