force-app/main/default/objects/Employee__c/fields/Standing_Desk__c.field-meta.xml
<CustomField>
    <fullName>Standing_Desk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standing Desk</label>
    <type>Checkbox</type>
</CustomField>