force-app/main/default/objects/Employee__c/fields/Technology_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technology_Notes__c</fullName>
    <label>Technology Notes</label>
    <type>TextArea</type>
</CustomField>