force-app/main/default/objects/Employee__c/fields/Vehicle_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Assignment</label>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>