force-app/main/default/objects/Employee__c/listViews/All_Employees.listView-meta.xml
<ListView>
    <fullName>All_Employees</fullName>
    <columns>NAME</columns>
    <columns>Hire_Date__c</columns>
    <columns>Term_Date__c</columns>
    <columns>Birthday__c</columns>
    <columns>BirthdayFinder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Employees</label>
</ListView>