force-app/main/default/objects/Employee__c/listViews/Cara_Connects_Employees.listView-meta.xml
<ListView>
    <fullName>Cara_Connects_Employees</fullName>
    <columns>NAME</columns>
    <columns>Hire_Date__c</columns>
    <columns>Term_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hourly_Wage__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Term_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Current Cara &amp; Connects Employees</label>
    <language>en_US</language>
</ListView>