force-app/main/default/objects/Employee__c/listViews/Cleanslate_Employees.listView-meta.xml
<ListView>
    <fullName>Cleanslate_Employees</fullName>
    <columns>NAME</columns>
    <columns>Hire_Date__c</columns>
    <columns>Hourly_Wage__c</columns>
    <columns>Vehicle_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hourly_Wage__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Term_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Cleanslate Employees</label>
    <language>en_US</language>
</ListView>