force-app/main/default/objects/Employee__c/listViews/Former_Employees.listView-meta.xml
<ListView>
    <fullName>Former_Employees</fullName>
    <columns>NAME</columns>
    <columns>Hire_Date__c</columns>
    <columns>Term_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Term_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Former Employees</label>
    <language>en_US</language>
</ListView>